--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,7 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
     /* Path config */
+    "baseUrl": ".",
     "paths": {
       "@/*": [
         "./src/*"
