--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "sort-by": "^1.2.0"
   },
   "devDependencies": {
+    "@faker-js/faker": "^8.0.2",
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "14.4.3",
@@ -35,6 +36,7 @@
     "jest": "29.5.0",
     "jest-dom": "4.0.0",
     "jest-environment-jsdom": "^29.3.1",
+    "jest-fetch-mock": "^3.0.3",
     "ts-jest": "29.1.0",
     "ts-node": "10.9.1",
     "typescript": "5.1.3",
