--- a/package.json
+++ b/package.json
@@ -12,12 +12,12 @@
     "test:coverage": "jest --coverage"
   },
   "dependencies": {
-    "localforage": "^1.10.0",
-    "match-sorter": "^6.3.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.13.0",
-    "sort-by": "^1.2.0"
+    "localforage": "1.10.0",
+    "match-sorter": "6.3.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-router-dom": "6.13.0",
+    "sort-by": "1.2.0"
   },
   "devDependencies": {
     "@faker-js/faker": "^8.0.2",
@@ -34,7 +34,6 @@
     "eslint-plugin-react-hooks": "4.6.0",
     "eslint-plugin-react-refresh": "0.3.4",
     "jest": "29.5.0",
-    "jest-dom": "4.0.0",
     "jest-environment-jsdom": "^29.3.1",
     "jest-fetch-mock": "^3.0.3",
     "ts-jest": "29.1.0",
